maven版本可运行初版

--- a/admin-ms/src/main/resources/jdbc.properties
+++ b/admin-ms/src/main/resources/jdbc.properties
@@ -10,3 +10,4 @@ jdbc.maxActive=10
 #jdbc.password=admin
 #jdbc.driverClassName=oracle.jdbc.driver.OracleDriver
 #jdbc.maxActive=10
+mybatis.mapperLocation=classpath*:mapper/**/*.xml
