--- a/db-sql/pom.xml
+++ b/db-sql/pom.xml
@@ -27,8 +27,22 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <defaultGoal>compile</defaultGoal>
+        <plugins>
+            <plugin>
+                <groupId>org.mybatis.generator</groupId>
+                <artifactId>mybatis-generator-maven-plugin</artifactId>
+                <version>1.3.2</version>
+                <configuration>
+                    <verbose>true</verbose>
+                    <overwrite>true</overwrite>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
     <properties>
-        <project.build.sourceEncoding>${project.build.sourceEncoding}</project.build.sourceEncoding>
         <mybatis.version>3.2.8</mybatis.version>
         <mybatis-spring.version>1.2.2</mybatis-spring.version>
     </properties>
