--- a/admin-ms/src/main/resources/jdbc.properties
+++ b/admin-ms/src/main/resources/jdbc.properties
@@ -1,6 +1,6 @@
 #MySql
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://192.168.52.106:3306/fui?autoReconnect=true&amp;characterEncoding=utf-8
+jdbc.url=jdbc:mysql://192.168.52.106:3306/fui?useUnicode=true&characterEncoding=utf-8&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true
 jdbc.username=fui
 jdbc.password=admin
 jdbc.maxActive=10
