把activiti工作流引擎数据库表和框架表分离

--- a/admin-ms/src/main/resources/jdbc.properties
+++ b/admin-ms/src/main/resources/jdbc.properties
@@ -2,7 +2,11 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://192.168.52.106:3306/fui?useUnicode=true&characterEncoding=utf-8&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true
 jdbc.username=fui
-jdbc.password=admin
+jdbc.password=****
+#init activity engine database tables
+#jdbc.url=jdbc:mysql://127.0.0.1:3306/act?useUnicode=true&characterEncoding=utf-8&autoReconnect=true
+#jdbc.username=root
+#jdbc.password=****
 jdbc.maxActive=10
 #Oracle
 #jdbc.url=jdbc:oracle:thin:@192.168.19.128:1521:orcl
