框架整体优化

--- a/common-utils/pom.xml
+++ b/common-utils/pom.xml
@@ -14,8 +14,12 @@
     <name>common-utils</name>
     <url>http://maven.apache.org</url>
 
-    <properties>
-        <project.build.sourceEncoding>${project.build.sourceEncoding}</project.build.sourceEncoding>
-    </properties>
+    <dependencies>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>RELEASE</version>
+        </dependency>
+    </dependencies>
 
 </project>
