--- a/db-sql/src/main/resources/conf/jdbc.properties
+++ b/db-sql/src/main/resources/conf/jdbc.properties
@@ -10,6 +10,6 @@ jdbc.maxActive=10
 #jdbc.password=admin
 #jdbc.driverClassName=oracle.jdbc.driver.OracleDriver
 #jdbc.maxActive=10
-mybatis.dbtype=mysql
+mybatis.dbType=mysql
 mybatis.mapperLocation=classpath*:mapper/**/*.xml
 jdbc.driverLocation=D:/installed/apache-maven-3.3.9/Repository/mysql/mysql-connector-java/5.1.18/mysql-connector-java-5.1.18.jar
