--- a/admin-ms/src/main/resources/jdbc.properties
+++ b/admin-ms/src/main/resources/jdbc.properties
@@ -2,11 +2,11 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://192.168.52.106:3306/fui?useUnicode=true&characterEncoding=utf-8&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true
 jdbc.username=fui
-jdbc.password=****
+jdbc.password=admin
 #init activity engine database tables
 #jdbc.url=jdbc:mysql://127.0.0.1:3306/act?useUnicode=true&characterEncoding=utf-8&autoReconnect=true
 #jdbc.username=root
-#jdbc.password=****
+#jdbc.password=admin
 jdbc.maxActive=10
 #Oracle
 #jdbc.url=jdbc:oracle:thin:@192.168.19.128:1521:orcl
@@ -14,4 +14,5 @@ jdbc.maxActive=10
 #jdbc.password=admin
 #jdbc.driverClassName=oracle.jdbc.driver.OracleDriver
 #jdbc.maxActive=10
+mybatis.dbType=mysql
 mybatis.mapperLocation=classpath*:mapper/**/*.xml
