--- a/admin-ms/src/main/resources/log4j.properties
+++ b/admin-ms/src/main/resources/log4j.properties
@@ -1,7 +1,6 @@
 #Global logging configuration
-log4j.rootLogger=ERROR, stdout
-#log4j.logger\u540e\u9762\u8ddf\u7740\u7684\u662f\u9879\u76eedao\u5305\u8def\u5f84\uff0c\u91cc\u9762\u5168\u90e8\u90fd\u662fdao\u5c42\u7684\u63a5\u53e3
-log4j.logger.com.fui.dao=ERROR
+log4j.rootLogger=error,stdout
+log4j.logger.com.fui.dao=error
 #Console output...
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
