--- a/db-sql/pom.xml
+++ b/db-sql/pom.xml
@@ -40,6 +40,17 @@
             <artifactId>cglib</artifactId>
             <version>2.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.talkyun.apus</groupId>
+            <artifactId>apus-comm</artifactId>
+            <version>1.0.2</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.oracle</groupId>
+                    <artifactId>ojdbc14</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
     </dependencies>
 
     <build>
