--- a/db-sql/pom.xml
+++ b/db-sql/pom.xml
@@ -41,15 +41,9 @@
             <version>2.2</version>
         </dependency>
         <dependency>
-            <groupId>com.talkyun.apus</groupId>
-            <artifactId>apus-comm</artifactId>
-            <version>1.0.2</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>com.oracle</groupId>
-                    <artifactId>ojdbc14</artifactId>
-                </exclusion>
-            </exclusions>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+            <version>${pagehelper.version}</version>
         </dependency>
     </dependencies>
 
@@ -71,5 +65,6 @@
     <properties>
         <mybatis.version>3.2.8</mybatis.version>
         <mybatis-spring.version>1.2.2</mybatis-spring.version>
+        <pagehelper.version>5.0.1</pagehelper.version>
     </properties>
 </project>
