--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,15 @@
         <module>db-sql</module>
         <module>admin-ms</module>
     </modules>
+    <repositories>
+        <repository>
+            <id>talkyun</id>
+            <name>talkyun maven repository</name>
+            <url>http://nexus.talkyun.com/content/repositories/public/</url>
+            <!--<url>http://maven.aliyun.com/nexus/content/groups/public/</url>-->
+            <layout>default</layout>
+        </repository>
+    </repositories>
     <dependencies>
         <dependency>
             <groupId>${jdbc.driver.groupId}</groupId>
