--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,13 @@
         <module>db-sql</module>
         <module>admin-ms</module>
     </modules>
+    <repositories>
+        <repository>
+            <id>nexus-aliyun</id>
+            <name>Nexus aliyun</name>
+            <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
+        </repository>
+    </repositories>
     <dependencies>
         <!-- SPRING begin -->
         <dependency>
