--- a/admin-ms/src/main/webapp/WEB-INF/web.xml
+++ b/admin-ms/src/main/webapp/WEB-INF/web.xml
@@ -2,6 +2,10 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="2.5">
   <display-name>fui</display-name>
   <context-param>
+    <param-name>logbackConfigLocation</param-name>
+    <param-value>classpath:conf/logback.xml</param-value>
+  </context-param>
+  <context-param>
     <param-name>contextConfigLocation</param-name>
     <param-value>/WEB-INF/config/spring-*.xml</param-value>
   </context-param>
