--- a/admin-ms/pom.xml
+++ b/admin-ms/pom.xml
@@ -242,6 +242,34 @@
             <artifactId>xmlgraphics-commons</artifactId>
             <version>1.2</version>
         </dependency>
+        <dependency>
+            <groupId>iplat4j</groupId>
+            <artifactId>iplat4j</artifactId>
+            <version>3.9</version>
+            <scope>system</scope>
+            <systemPath>${pom.basedir}/src/main/webapp/WEB-INF/lib/iplat4j-3.9.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>qrcode-core</groupId>
+            <artifactId>qrcode-core</artifactId>
+            <version>3.2.0</version>
+            <scope>system</scope>
+            <systemPath>${pom.basedir}/src/main/webapp/WEB-INF/lib/core_3.2.0.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>java_memcached-release</groupId>
+            <artifactId>java_memcached-release</artifactId>
+            <version>2.6.6</version>
+            <scope>system</scope>
+            <systemPath>${pom.basedir}/src/main/webapp/WEB-INF/lib/java_memcached-release_2.6.6.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>json-lib</groupId>
+            <artifactId>json-lib</artifactId>
+            <version>2.2.3</version>
+            <scope>system</scope>
+            <systemPath>${pom.basedir}/src/main/webapp/WEB-INF/lib/json-lib-2.2.3-jdk13.jar</systemPath>
+        </dependency>
     </dependencies>
 
     <build>
