--- a/admin-ms/pom.xml
+++ b/admin-ms/pom.xml
@@ -204,6 +204,11 @@
             <version>${spring.version}</version>
         </dependency>
         <!-- WEB end -->
+        <dependency>
+            <groupId>org.quartz-scheduler</groupId>
+            <artifactId>quartz</artifactId>
+            <version>2.2.3</version>
+        </dependency>
         <!-- GENERAL UTILS begin -->
         <dependency>
             <groupId>com.google.guava</groupId>
