--- a/admin-ms/src/main/resources/jdbc.properties
+++ b/admin-ms/src/main/resources/jdbc.properties
@@ -1,14 +1,15 @@
 #MySql
-jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://127.0.0.1:3306/fui?useUnicode=true&characterEncoding=utf8&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true
-jdbc.username=fui
-jdbc.password=admin
-jdbc.maxActive=10
-#Oracle
-#jdbc.driverClassName=oracle.jdbc.driver.OracleDriver
-#jdbc.url=jdbc:oracle:thin:@192.168.19.128:1521:orcl
+#jdbc.driverClassName=com.mysql.jdbc.Driver
+#jdbc.url=jdbc:mysql://127.0.0.1:3306/fui?useUnicode=true&characterEncoding=utf8&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true
 #jdbc.username=fui
 #jdbc.password=admin
 #jdbc.maxActive=10
-mybatis.dbType=mysql
+#mybatis.dbType=mysql
+#Oracle
+jdbc.driverClassName=oracle.jdbc.driver.OracleDriver
+jdbc.url=jdbc:oracle:thin:@192.168.190.130:1521:orcl
+jdbc.username=fui
+jdbc.password=admin
+jdbc.maxActive=10
+mybatis.dbType=oracle
 mybatis.mapperLocation=classpath*:mapper/**/*.xml
