--- a/admin-ms/src/main/webapp/WEB-INF/web.xml
+++ b/admin-ms/src/main/webapp/WEB-INF/web.xml
@@ -10,6 +10,9 @@
     <param-value>/WEB-INF/config/spring-*.xml</param-value>
   </context-param>
   <listener>
+    <listener-class>com.fui.listener.FuiLogbackConfigListener</listener-class>
+  </listener>
+  <listener>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   </listener>
   <listener>
