--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>common-utils</module>
         <module>db-sql</module>
+        <module>portal</module>
         <module>admin-ms</module>
     </modules>
     <repositories>
