--- a/admin-ms/src/main/webapp/WEB-INF/web.xml
+++ b/admin-ms/src/main/webapp/WEB-INF/web.xml
@@ -123,10 +123,10 @@
   </welcome-file-list>
   <error-page>
     <error-code>404</error-code>
-    <location>/WEB-INF/views/error/404.jsp</location>
+    <location>/supervisor/404</location>
   </error-page>
   <error-page>
     <error-code>500</error-code>
-    <location>/WEB-INF/views/error/500.jsp</location>
+    <location>/supervisor/500</location>
   </error-page>
 </web-app>
