--- a/db-sql/pom.xml
+++ b/db-sql/pom.xml
@@ -16,6 +16,20 @@
 
     <dependencies>
         <dependency>
+            <groupId>ojdbc14</groupId>
+            <artifactId>ojdbc14</artifactId>
+            <version>10.2.0.3.0</version>
+            <scope>system</scope>
+            <systemPath>${pom.basedir}/src/lib/ojdbc14-10.2.0.3.0.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>sqljdbc4</groupId>
+            <artifactId>sqljdbc4</artifactId>
+            <version>4.0</version>
+            <scope>system</scope>
+            <systemPath>${pom.basedir}/src/lib/sqljdbc4-4.0.jar</systemPath>
+        </dependency>
+        <dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis</artifactId>
             <version>${mybatis.version}</version>
