--- a/admin-ms/src/main/resources/project.properties
+++ b/admin-ms/src/main/resources/project.properties
@@ -1,7 +1,8 @@
+#**************** init project properties ****************
 projectName=fui
 projectType=dev
-
 platSchema=fui
 enterpriseName=www.fui.com
-
+#**************** init quartz properties ****************
 quartz.switch=false
+quartz.cronExpression=0/2 * * * * ?
