--- a/portal/src/main/resources/conf/application.properties
+++ b/portal/src/main/resources/conf/application.properties
@@ -1,4 +1,11 @@
 # 1加密 0不加密
-yn.encryption=0
+yn.encryption=1
 # 1解密 0不解密
-yn.decrypt=0
+yn.decryption=1
+# 文件上传目录
+file.upload.dir=D:/j2ee_workspace/fui-maven/portal/target/portal-1.0
+file.upload.context.path=/file
+# ENV Distributed ID
+ENV.SERVER.ID=
+# server host
+server.host=http://192.168.52.106:8099/fuiapp
