--- a/portal/pom.xml
+++ b/portal/pom.xml
@@ -25,6 +25,17 @@
             <artifactId>db-sql</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <!-- UTILS -->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>${commons-io.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.2.2</version>
+        </dependency>
         <!-- spring data access -->
         <dependency>
             <groupId>org.springframework.data</groupId>
@@ -84,7 +95,6 @@
         </dependency>
     </dependencies>
     <build>
-        <finalName>admin-ms</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
